k3s-deployment/database-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-external
  namespace: postgres-app-db
spec:
  type: LoadBalancer
  selector:
    statefulset.kubernetes.io/pod-name: postgresql-0
  ports:
    - port: 5432
      targetPort: 5432
