k3s-deployment/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
      - hello-world.cristian-branet.academy.dvloper.io
      secretName: desk-manager-certificate-secret
  rules:
    - host: hello-world.cristian-branet.academy.dvloper.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world
                port:
                  number: 80
